[project]
name = "bilimarket-scraper"
version = "0.1.0"
description = "A polite, resumable Bilibili C2C market scraper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shujian He" }]
dependencies = ["requests>=2.31,<3"]

[project.scripts]
bilimarket-scraper = "bilimarket_scraper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
